# wireshark-app

./: .gitignore  build.bat  install.bat  pyinstaller_entry.py  pyproject.toml
pcapqt/: main.py
pcapqt/models/: packet_filter_model.py  packet_table_model.py
pcapqt/threads/: sniffer_thread.py
pcapqt/utils/: hostname_resolver.py  packet_parser.py  security_analyzer.py
pcapqt/utils/protocol_parsers/: constants.py
pcapqt/views/: main_window.py  statistics_dialog.py
