[project]
name = "pcapqt"
version = "0.1.0"
description = "My python project used to capture package use npcap"
authors = [
    {name = "ghuyxd", email = "ghuyxdz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "pyqt5>=5.15.0",
    "scapy>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pyqt5-tools>=5.15.0",
    "pyqt5-stubs>=5.15.0",
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
pcapqt = "pcapqt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pcapqt"]

[tool.pyinstaller]
name = "PcapQt"
onefile = true
windowed = true
icon = "icons/app.ico"
